// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`F0Tag Snapshot - alert levels 1`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 rounded-full pl-0.5 bg-f0-background-info text-f0-foreground-info"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      aria-hidden={true}
      bbHeight="100%"
      bbWidth="100%"
      className="shrink-0 w-5 h-5 stroke-md text-f0-icon-info"
      fill="none"
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          [
            {},
          ],
          {
            "flex": 0,
            "height": "100%",
            "width": "100%",
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M12 3a9 9 0 1 1 0 18 9 9 0 0 1 0-18m0 1.8a7.2 7.2 0 1 0 0 14.4 7.2 7.2 0 0 0 0-14.4m-.002 5.8a.9.9 0 0 1 .9.9v3.75a.9.9 0 0 1-1.8 0V11.5a.9.9 0 0 1 .9-.9M12 8a.9.9 0 1 1 0 1.8.9.9 0 0 1 0-1.8"
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground-info text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      info
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - alert levels 2`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 rounded-full pl-0.5 bg-f0-background-warning text-f0-foreground-warning"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      aria-hidden={true}
      bbHeight="100%"
      bbWidth="100%"
      className="shrink-0 w-5 h-5 stroke-md text-f0-icon-warning"
      fill="none"
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          [
            {},
          ],
          {
            "flex": 0,
            "height": "100%",
            "width": "100%",
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M10.252 4.147c.762-1.372 2.735-1.372 3.497 0l6.6 11.882c.741 1.333-.223 2.97-1.748 2.97H5.4c-1.525 0-2.489-1.637-1.748-2.97zM12 14.037a1.15 1.15 0 1 0 0 2.3 1.15 1.15 0 0 0 0-2.3m0-6.987a1.12 1.12 0 0 0-1.117 1.207l.303 3.9a.818.818 0 0 0 1.629 0l.303-3.9A1.12 1.12 0 0 0 12 7.05"
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground-warning text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      warning
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - alert levels 3`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 rounded-full pl-0.5 bg-f0-background-critical text-f0-foreground-critical"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      aria-hidden={true}
      bbHeight="100%"
      bbWidth="100%"
      className="shrink-0 w-5 h-5 stroke-md text-f0-icon-critical"
      fill="none"
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          [
            {},
          ],
          {
            "flex": 0,
            "height": "100%",
            "width": "100%",
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M12 3a9 9 0 1 1 0 18 9 9 0 0 1 0-18m0 11.037a1.15 1.15 0 1 0 .001 2.3 1.15 1.15 0 0 0 0-2.3m0-6.987a1.12 1.12 0 0 0-1.116 1.207l.302 3.9a.82.82 0 0 0 .815.754c.426 0 .78-.33.814-.754l.303-3.9a1.12 1.12 0 0 0-1.117-1.207"
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground-critical text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      critical
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - alert levels 4`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 rounded-full pl-0.5 bg-f0-background-positive text-f0-foreground-positive"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      aria-hidden={true}
      bbHeight="100%"
      bbWidth="100%"
      className="shrink-0 w-5 h-5 stroke-md text-f0-icon-positive"
      fill="none"
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          [
            {},
          ],
          {
            "flex": 0,
            "height": "100%",
            "width": "100%",
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M12 3a9 9 0 1 1 0 18 9 9 0 0 1 0-18m0 1.8a7.2 7.2 0 1 0 0 14.4 7.2 7.2 0 0 0 0-14.4m2.698 4.204a.9.9 0 0 1 1.273 1.272L11.248 15a.9.9 0 0 1-.638.262.9.9 0 0 1-.636-.262L8.03 13.055a.9.9 0 0 1 1.273-1.273l1.307 1.308z"
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground-positive text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      positive
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - balance variants 1`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 pl-1 rounded-full bg-f0-background-positive text-f0-foreground-positive"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="100%"
      bbWidth="100%"
      className="shrink-0 w-4 h-4 stroke-sm text-f0-icon-positive"
      fill="none"
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          [
            {},
          ],
          {
            "flex": 0,
            "height": "100%",
            "width": "100%",
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M5.065 11.667a.9.9 0 0 1 0-1.272l6.299-6.3a.9.9 0 0 1 1.272 0l6.3 6.3a.9.9 0 0 1-1.272 1.272L12.9 6.904v12.365a.9.9 0 0 1-1.8 0V6.905l-4.763 4.762a.9.9 0 0 1-1.272 0"
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground-positive text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      12% · 102.35
    </Text>
    <Text
      className="sr-only no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
    >
      positive balance
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - balance variants 2`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 pl-1 rounded-full bg-f0-background-critical text-f0-foreground-critical"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="100%"
      bbWidth="100%"
      className="shrink-0 w-4 h-4 stroke-sm text-f0-icon-critical"
      fill="none"
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          [
            {},
          ],
          {
            "flex": 0,
            "height": "100%",
            "width": "100%",
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M12 3.838c.497 0 .9.404.9.9v12.359l4.739-4.757a.9.9 0 0 1 1.274 1.27l-6.275 6.3a.9.9 0 0 1-1.138.112l-.137-.113-6.276-6.298a.9.9 0 0 1 1.275-1.27l4.739 4.756V4.738a.9.9 0 0 1 .9-.9"
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground-critical text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      -3% · 209.80
    </Text>
    <Text
      className="sr-only no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
    >
      negative balance
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - balance variants 3`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 text-f0-foreground pl-2 rounded-full"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground-secondary text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      N/A
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - custom dot color 1`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 text-f0-foreground pl-1 rounded-full border border-solid border-f0-border-secondary"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      aria-hidden={true}
      className="m-1 aspect-square w-2 rounded-full"
      style={
        {
          "backgroundColor": "hsl(216 90% 65%)",
        }
      }
    />
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      custom
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - dot colors 1`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 text-f0-foreground pl-1 rounded-full border border-solid border-f0-border-secondary"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      aria-hidden={true}
      className="m-1 aspect-square w-2 rounded-full"
      style={
        {
          "backgroundColor": "hsl(184 92% 35%)",
        }
      }
    />
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      viridian
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - dot colors 2`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 text-f0-foreground pl-1 rounded-full border border-solid border-f0-border-secondary"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      aria-hidden={true}
      className="m-1 aspect-square w-2 rounded-full"
      style={
        {
          "backgroundColor": "hsl(216 90% 65%)",
        }
      }
    />
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      malibu
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - dot colors 3`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 text-f0-foreground pl-1 rounded-full border border-solid border-f0-border-secondary"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      aria-hidden={true}
      className="m-1 aspect-square w-2 rounded-full"
      style={
        {
          "backgroundColor": "hsl(38 92% 54%)",
        }
      }
    />
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      yellow
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - dot colors 4`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 text-f0-foreground pl-1 rounded-full border border-solid border-f0-border-secondary"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      aria-hidden={true}
      className="m-1 aspect-square w-2 rounded-full"
      style={
        {
          "backgroundColor": "hsl(258 88% 67%)",
        }
      }
    />
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      purple
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - dot colors 5`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 text-f0-foreground pl-1 rounded-full border border-solid border-f0-border-secondary"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      aria-hidden={true}
      className="m-1 aspect-square w-2 rounded-full"
      style={
        {
          "backgroundColor": "hsl(340 49% 60%)",
        }
      }
    />
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      lilac
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - dot colors 6`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 text-f0-foreground pl-1 rounded-full border border-solid border-f0-border-secondary"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      aria-hidden={true}
      className="m-1 aspect-square w-2 rounded-full"
      style={
        {
          "backgroundColor": "hsl(331 84% 63%)",
        }
      }
    />
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      barbie
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - dot colors 7`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 text-f0-foreground pl-1 rounded-full border border-solid border-f0-border-secondary"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      aria-hidden={true}
      className="m-1 aspect-square w-2 rounded-full"
      style={
        {
          "backgroundColor": "hsl(192 26% 54%)",
        }
      }
    />
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      smoke
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - dot colors 8`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 text-f0-foreground pl-1 rounded-full border border-solid border-f0-border-secondary"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      aria-hidden={true}
      className="m-1 aspect-square w-2 rounded-full"
      style={
        {
          "backgroundColor": "hsl(162 44% 33%)",
        }
      }
    />
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      army
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - dot colors 9`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 text-f0-foreground pl-1 rounded-full border border-solid border-f0-border-secondary"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      aria-hidden={true}
      className="m-1 aspect-square w-2 rounded-full"
      style={
        {
          "backgroundColor": "hsl(84 55% 53%)",
        }
      }
    />
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      flubber
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - dot colors 10`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 text-f0-foreground pl-1 rounded-full border border-solid border-f0-border-secondary"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      aria-hidden={true}
      className="m-1 aspect-square w-2 rounded-full"
      style={
        {
          "backgroundColor": "hsl(239 91% 64%)",
        }
      }
    />
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      indigo
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - dot colors 11`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 text-f0-foreground pl-1 rounded-full border border-solid border-f0-border-secondary"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      aria-hidden={true}
      className="m-1 aspect-square w-2 rounded-full"
      style={
        {
          "backgroundColor": "hsl(25 46% 53%)",
        }
      }
    />
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      camel
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - person, team and company variants 1`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden pr-2 text-f0-foreground rounded-full border border-solid border-f0-border-secondary py-px pl-px"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      className="inline-flex "
    >
      <View
        className="h-fit w-fit"
      >
        <View
          aria-hidden={true}
          className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-5 h-5 rounded-full bg-[hsl(theme(colors.army-50))]"
          data-a11y-color-contrast-ignore={true}
          role="img"
        >
          <Text
            className="text-f0-foreground-inverse/90 text-sm"
            data-a11y-color-contrast-ignore={true}
          >
            J
          </Text>
        </View>
      </View>
    </View>
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Jane Doe
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - person, team and company variants 2`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden pr-2 text-f0-foreground rounded-sm border border-solid border-f0-border-secondary py-px pl-px"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      className="inline-flex "
    >
      <View
        className="h-fit w-fit"
      >
        <View
          aria-hidden={true}
          className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-5 h-5 rounded-xs bg-[hsl(theme(colors.purple-50))]"
          data-a11y-color-contrast-ignore={true}
          role="img"
        >
          <Text
            className="text-f0-foreground-inverse/90 text-sm"
            data-a11y-color-contrast-ignore={true}
          >
            P
          </Text>
        </View>
      </View>
    </View>
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      People Ops
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - person, team and company variants 3`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden pr-2 text-f0-foreground rounded-sm border border-solid border-f0-border-secondary py-px pl-px"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      className="inline-flex "
    >
      <View
        className="h-fit w-fit"
      >
        <View
          aria-hidden={true}
          className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-5 h-5 rounded-xs bg-[hsl(theme(colors.viridian-50))]"
          data-a11y-color-contrast-ignore={true}
          role="img"
        >
          <Text
            className="text-f0-foreground-inverse/90 text-sm"
            data-a11y-color-contrast-ignore={true}
          >
            F
          </Text>
        </View>
      </View>
    </View>
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Factorial
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - raw with icon 1`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 text-f0-foreground pl-1 rounded-full border border-solid border-f0-border-secondary"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      aria-hidden={true}
      bbHeight="100%"
      bbWidth="100%"
      className="shrink-0 w-4 h-4 stroke-sm text-f0-icon"
      fill="none"
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          [
            {},
          ],
          {
            "flex": 0,
            "height": "100%",
            "width": "100%",
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M9.734 4.014a3.9 3.9 0 0 1 4.534 0l4 2.857a3.9 3.9 0 0 1 1.633 3.173v5.957c0 2.153-1.747 3.9-3.9 3.9H15c-1.05 0-1.9-.852-1.9-1.901v-2.5a1.1 1.1 0 0 0-2.2 0V18c0 1.049-.851 1.9-1.9 1.9H8A3.9 3.9 0 0 1 4.1 16v-5.956a3.9 3.9 0 0 1 1.634-3.173zm3.487 1.465a2.1 2.1 0 0 0-2.441 0l-4 2.857a2.1 2.1 0 0 0-.88 1.708v5.957c0 1.16.94 2.1 2.1 2.1h1c.055 0 .1-.046.1-.101v-2.5a2.9 2.9 0 1 1 5.8 0V18c0 .055.045.1.1.1h1c1.16 0 2.1-.94 2.1-2.1v-5.956c0-.678-.328-1.314-.88-1.708z"
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      home
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - root composition 1`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 text-f0-foreground pl-1 rounded-full"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="100%"
      bbWidth="100%"
      className="shrink-0 w-4 h-4 stroke-sm text-f0-icon"
      fill="none"
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          [
            {},
          ],
          {
            "flex": 0,
            "height": "100%",
            "width": "100%",
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M9.734 4.014a3.9 3.9 0 0 1 4.534 0l4 2.857a3.9 3.9 0 0 1 1.633 3.173v5.957c0 2.153-1.747 3.9-3.9 3.9H15c-1.05 0-1.9-.852-1.9-1.901v-2.5a1.1 1.1 0 0 0-2.2 0V18c0 1.049-.851 1.9-1.9 1.9H8A3.9 3.9 0 0 1 4.1 16v-5.956a3.9 3.9 0 0 1 1.634-3.173zm3.487 1.465a2.1 2.1 0 0 0-2.441 0l-4 2.857a2.1 2.1 0 0 0-.88 1.708v5.957c0 1.16.94 2.1 2.1 2.1h1c.055 0 .1-.046.1-.101v-2.5a2.9 2.9 0 1 1 5.8 0V18c0 .055.045.1.1.1h1c1.16 0 2.1-.94 2.1-2.1v-5.956c0-.678-.328-1.314-.88-1.708z"
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      In review
    </Text>
    <Text
      className="text-xs text-f0-foreground-secondary"
    >
      Q1
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - status variants 1`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 pl-1 rounded-full bg-f0-background-secondary text-f0-foreground-secondary"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      aria-hidden={true}
      className="m-1 aspect-square w-2 rounded-full bg-f0-icon"
    />
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground-secondary text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      neutral
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - status variants 2`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 pl-1 rounded-full bg-f0-background-info text-f0-foreground-info"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      aria-hidden={true}
      className="m-1 aspect-square w-2 rounded-full bg-f0-icon-info"
    />
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground-info text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      info
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - status variants 3`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 pl-1 rounded-full bg-f0-background-positive text-f0-foreground-positive"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      aria-hidden={true}
      className="m-1 aspect-square w-2 rounded-full bg-f0-icon-positive"
    />
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground-positive text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      positive
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - status variants 4`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 pl-1 rounded-full bg-f0-background-warning text-f0-foreground-warning"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      aria-hidden={true}
      className="m-1 aspect-square w-2 rounded-full bg-f0-icon-warning"
    />
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground-warning text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      warning
    </Text>
  </View>
</View>
`;

exports[`F0Tag Snapshot - status variants 5`] = `
<View
  className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="flex max-w-full min-w-0 shrink flex-row items-center justify-start gap-1 overflow-hidden py-0.5 pr-2 pl-1 rounded-full bg-f0-background-critical text-f0-foreground-critical"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      aria-hidden={true}
      className="m-1 aspect-square w-2 rounded-full bg-f0-icon-critical"
    />
    <Text
      className="max-w-full shrink no-underline normal-case tracking-normal text-[16px] leading-[24px] font-medium text-f0-foreground-critical text-left"
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      critical
    </Text>
  </View>
</View>
`;
